[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "netscan-cli"
version = "0.1.0"
description = "A compact CLI for authorized asset discovery and HTTP surface inspection."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Codex" }
]

[project.scripts]
netscan = "netscan.cli:main"

[tool.setuptools]
packages = ["netscan"]
